# job-assistant

./: .gitignore  ARCHITECTURE.md  CLAUDE.md  ENVIRONMENT.md  PM_SPRINT1_ACCEPTANCE.md  eslint.config.js  index.html  package-lock.json  package.json  prettier.config.js  tsconfig.json  tsconfig.node.json  tsconfig.node.tsbuildinfo  tsconfig.tsbuildinfo  vite.config.js  vite.config.ts
.claude/: MEMORY.md  settings.local.json
.claude/memory/: project-architecture.md
design-system/job-assistant/: MASTER.md
docs/: README.md
docs/agent-prompts/: MODULE_B_前端开发.md  MODULE_B_后端开发.md  MODULE_C_前端开发.md  MODULE_C_后端开发.md  MODULE_D_前端开发.md  MODULE_D_后端开发.md  MODULE_D_测试说明.md  MODULE_E_前端开发.md  MODULE_E_后端开发.md  MODULE_E_测试说明.md
docs/delivery-reports/: BACKEND_DELIVERY_MODULE_D.md  MODULE_A_前端交付报告.md  MODULE_A_后端交付报告.md  MODULE_B_前端交付报告.md  MODULE_B_后端交付报告.md  MODULE_C_前端交付报告.md  MODULE_C_后端交付报告.md  MODULE_D_前端交付报告.md  MODULE_E_前端交付报告.md
docs/pm-reports/: MODULE_A_基础设施搭建.md  MODULE_B_AI打招呼生成.md  MODULE_D_体验优化.md  (+3 more)
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: application.rs  backup.rs  dashboard.rs  export.rs  mod.rs  position.rs  profile.rs  settings.rs
src-tauri/src/models/: application.rs  dashboard.rs  mod.rs  position.rs  profile.rs  settings.rs
src-tauri/src/storage/: application_storage.rs  file_ops.rs  mod.rs  position_storage.rs  profile_storage.rs  settings_storage.rs
src-tauri/src/utils/: error.rs  frontmatter.rs  id.rs  mod.rs
(+53 files in other folders)
