[package]
name = "job-assistant"
version = "0.1.0"
description = "求职助手 - 桌面端求职辅助工具"
authors = ["wps0718"]
edition = "2021"

[lib]
name = "job_assistant_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
tokio = { version = "1", features = ["full"] }
thiserror = "2"
zip = "2"